# papermap

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  tests.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: ci.yml  publish.yml  test.yml
docs/: Makefile  api.md  changelog.md  cli.md  conf.py  index.md  installation.md  usage.md
papermap/: __init__.py  constants.py  defaults.py  gpx.py  papermap.py  point.py  tile.py  utils.py
src/papermap/: __init__.py  cli.py  constants.py  defaults.py  geodesy.py  papermap.py  tile.py  tile_provider.py  tile_server.py  typing.py  utils.py
src/papermap/tile_providers/: __init__.py  basemap_at.py  cartodb.py  cyclosm.py  esri.py  google.py  here.py  jawg.py  maptiler.py  misc.py  nasagibs.py  nlmaps.py  openseamap.py  openstreetmap.py  opentopomap.py  stadia.py  swiss.py  thunderforest.py  tomtom.py  usgs.py  wikimedia.py
src/papermap/tile_servers/: __init__.py  basemap_at.py  cartodb.py  cyclosm.py  esri.py  google.py  here.py  jawg.py  legacy.py  maptiler.py  misc.py  nasagibs.py  nlmaps.py  openseamap.py  openstreetmap.py  opentopomap.py  stadia.py  swiss.py  thunderforest.py  tomtom.py  usgs.py  wikimedia.py
tests/: __init__.py  conftest.py  smoke_test.py  test_cli.py  test_geodesy.py  test_integration.py  test_papermap.py  test_tile.py  test_tile_provider.py  test_tile_server.py  test_utils.py  utils.py
