[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "papermap"
authors = [{name = "Steven van de Graaf", email = "steven@vandegraaf.xyz"}]
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["paper", "map", "topography", "osm", "openstreetmap"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
requires-python = "~=3.8"
dependencies = [
    "click",
    "click_default_group",
    "fpdf2",
    "Pillow",
    "requests",
]
dynamic = ["version", "description"]

[project.optional-dependencies]
dev = [
    "black",
    "mypy",
    "pre-commit",
    "ruff",
]
docs = [
    "furo",
    "myst-parser",
    "sphinx",
    "sphinx-copybutton",
    "sphinxext-opengraph",
]
tests = [
    "cog",
    "pytest",
]

[project.urls]
Documentation = "https://papermap.readthedocs.io/en/stable/"
Changelog = "https://papermap.readthedocs.io/en/stable/changelog.html"
"Source code" = "https://github.com/sgraaf/papermap"
Issues = "https://github.com/sgraaf/papermap/issues"

[project.scripts]
papermap = "papermap.cli:cli"

[tool.ruff]
select = [
    "B",
    "C90",
    "E",
    "F",
    "I",
    "UP",
    "RUF100",
    "W",
]
ignore = ["E501"]
src = ["src"]
target-version = "py38"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
